<resources>
    <string name="app_name">Field Force</string>
    <string name="title_activity_landing">LandingActivity</string>
    <string name="google_maps_key">MIIEvAIBADANBgkqhkiG9w0BAQEFAASCBKYwggSiAgEAAoIBAQCduhDXL400thMPvMdhBX6oW8+L95Rip7nzDeP9QAiDePNUYchis7gf8YILZryjx5hTdIhpfZsDj2AzlSCca/yygTxh0nG5yEwQ47JfooirdpL0KyXEf/C6b8796MuYq+ahDb4zZa9SBnQN1YRD6hJoHVILh2hsZG6KncS9abUr0v5LGhR2Pqf5UThuLrBDuCgWFEVsVhjOzod3JVvfhXRA2nOYhDDKwMWEdc7Aft566HddeKsegPMTiQ+QdX1beu+akFl9qRhOiARiteFpi17DN63OA/yFQkPV12OumTD8fR5I2GNo5bdSjflUZUi4uGBRsUV6c5VxqbHm3i/VrpnXAgMBAAECggEAAe77yxEew2x1k8LPrhiZv3yb11TQpKj26ZjcMgjGUfF6O8Jhgq9xuWQfh2Sm0vP2bq3fojnTXA02gH6UG/bJVHLeVG12mwo7WUja5FTWWHiN2Qc4x+dKaMhIGreI3DVEELaRBCMVLbjW7iuvTgA6yFX1R7jmoDWKLJIK85UUW6/BV9taABKSZphzZhiHZ6jvxfbgQmiWDu2tBPHf+KLpj2aVmFsvl4WHEXohY3nJyDXGmn3cysANgMUwsv4e6szFbG9QUAe7cTgKJ1laQIJRRvnr2d5BvU7/oSbfydDY7fuX64ig3Z7BOOwQfkv+BwW2G/LF6qVAsgzmfsJ/6TfD0QKBgQDJNOCamFBNObMLSqpvQ31MEw4ikDu6srYh6Cw2BhAHZIdoyCVjVpHoWI7OS/9LF0Cf7sms8kW3aUHqh9mAP3nuKDaNzCZjuM2p/VecZSeL7ylZf3d4mkakaZruih6hH2mAxVFm+ZEJrTptxUUa7m5qnbNHxVC98/Xz9yU9BuPgDwKBgQDIrf9F64OmBeULgbs4Vli84TtXqg+jyv0zdfYdl8qBN8sb+d0xqmDlAjlRpOBMVPKXbUKwvOHeKso2oNoW8eoekalo/qwbNFLdni5H/id59cTnlpeaCv6jQylbn0YAt+Ig8k4TfUfrP1UBiLm5/Vr/TqL3EuQ2/Ph1lazA7yRhuQKBgDDnakQJC1OJ16vB7ST3+WdZJlFeTzY0o7IgFUbYOGMjmwnrw7KeYv5fL+6SaC2fLDTzPA+OH0XSDpRrioDybLdnDMNwQFBypYJQsk+wAmmvqpQ3OBmXHd5uUJrz9TfiQ6lpzDxEIm2Arjfp/77o/utpAx9JpTNWLYyroGBx4UcfAoGAXrEbnxZ+TDzD0yYn/XFg9d8hbUAlmRgTWdDzjQsu1sJI6K6CHQlUJzthaJDv9ZSv05wOt+6odXijahuETQdhfYMl+RESjNOntkMJe5cFcZryioSYjGtbtBXg0gbZtUUPQpSTGscmxG5h4hNt78EIyyeD5inX3cqIQpOZrIArHqECgYBo/L/2g6cFX5/G9xzpLn24QT2u/QWnH9ihrDpeA6u0fnHeMGS9HT0+GieA3zm/2QRQ+GpKop8hnv4lZMBt2rJnWzNNiWuc2ib31tU0ge7va3wsKPXhaZY9zUrxifax6keOnjg2KOwAlJ8aXkRFHIM8F0ZX+Wx91p82fcg8A/fpSw==</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="nsc">New Connection</string>
    <string name="decommissioning">Decommissioning</string>
    <string name="reconnection">Reconnection</string>
    <string name="disconnection">Disconnection</string>
    <string name="search">Search</string>
    <string name="meter_change">Meter Change</string>
    <string name="feeder_inspection">Inspection</string>
    <string name="maintenance">Maintenance</string>
    <string name="monitoring">Monitoring</string>
    <string name="login">Login</string>
    <string name="id">ID</string>
    <string name="password">Password</string>
    <string name="title">Title</string>
    <string name="sub_title">Sub-Title</string>
    <string name="completed">Completed</string>
    <string name="history">History</string>
    <string name="commissioning">Commissioning</string>
    <string name="total">Total</string>
    <string name="open">Open</string>
    <string name="revisit">Revisit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="search_result">Result Not Found</string>
    <string name="remaining">Remaining</string>
    <string name="consumer_name">Consumer Name</string>
    <string name="asset_id">Asset Id</string>
    <string name="acc_no">Account No</string>
    <string name="dummy_text">Dummy Text</string>
    <string name="full_name">Full Name</string>
    <string name="asset_name">Asset Name</string>
    <string name="job_name">Job Name</string>
    <string name="job_id">Job Id</string>
    <string name="breakdown_type">BreakDown Type</string>
    <string name="area">Area *</string>
    <string name="maintenance_type">Maintenance Type</string>
    <string name="category">Category</string>
    <string name="location">Location *</string>
    <string name="parameter">Parameter</string>
    <string name="sub_category">Sub Category</string>
    <string name="checking_parameters">Checking Parameters</string>
    <string name="make_no">Make No.</string>
    <string name="exit">Exit</string>
    <string name="consumer_no">Consumer Number</string>
    <string name="meter_id">Meter Id</string>
    <string name="alert_dialog_exit">Are you want to close Application?</string>
    <string name="alert_dialog_accept">Do you want to Accept Job?</string>
    <string name="accept">Accept</string>
    <string name="txt_reject">Reject</string>
    <string name="txt_pick_add">PickUp Address</string>
    <string name="material_list">Material List</string>
    <string name="material_name">Material Name</string>
    <string name="count">Count</string>
    <string name="alert_dialog_return">Are you Returning Material Today? </string>
    <string name="return_msg">Please select returning date!  </string>
    <string name="do_you_want_to_logged_out_now">Do You Want to\nLogged Out Now ?</string>
    <string name="do_you_want_to_close_exit_app_now">Do You Want to\nClose/Exit App Now ?</string>
    <string name="search_criteria1">You can search using Asset Name or ID</string>
    <string name="search_criteria2">You can search using Job Name or ID</string>
    <string name="search_criteria3">You can search using Asset Name or \n Maintenance type</string>
    <string name="search_criteria4">You can search using Meter NO.</string>
    <string name="search_criteria5">You can search using Consumer Name or Request ID</string>
    <string name="search_criteria6">You can search using Complaint Type or Complaint No</string>
    <string name="search_criteria7">You can search using Service Type or Service No</string>
    <string name="asset_image_after_main">Image After Maintenance</string>
    <string name="job_image">Job Image</string>
    <string name="asset_image">Asset Image</string>
    <string name="prv_asset_image">Image Before Maintenance</string>
    <string name="reading_params">Reading Parameters</string>
    <string name="enter_reading">Enter Reading</string>
    <string name="value">Value</string>
    <string name="units">Units</string>
    <string name="date">Date</string>
    <string name="total_assign">Total Assigned</string>
    <string name="install_add">Installation Address</string>
    <string name="fault_image">Fault Image</string>
    <string name="my_profile">My Profile</string>
    <string name="city">City</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="submit">Submit</string>
    <string name="complete">Complete</string>
    <string name="preventive">Preventive</string>
    <string name="breakdown">Breakdown</string>
    <string name="asset_indexing">Asset\nIndexing</string>
    <string name="enquiry">Enquiry</string>
    <string name="services">Services</string>
    <string name="complaint">Complaints</string>
    <string name="installation">Installation</string>
    <string name="convert">Convert</string>
    <string name="recovery">Recovery</string>
    <string name="site_verification">Site\nVerification</string>
    <string name="verification">Site Verification</string>
    <string name="ok">Ok</string>
    <string name="get_inspection_form">Get Inspection Form</string>
    <string name="inspection_form">Inspection Form</string>
    <string name="notification">Notification</string>
    <string name="type">Type</string>
    <string name="verify">Verify</string>
    <string name="binder">Binder</string>
    <string name="meter_no">Meter Number *</string>
    <string name="meter_number">Meter Number</string>
    <string-array name="meter_type">
        <item>@string/meter_type</item>
        <item>Smart</item>
        <item>Mechanical</item>
    </string-array>
    <string name="inspection_type">Inspection Type</string>
    <string name="monitoring_type">Monitoring Type</string>
    <string name="complaint_type">Complaint Type</string>
    <string name="completed_date">Completed Date</string>
    <string name="assigned_date">Assigned Date</string>
    <string name="supply_type">Supply Type</string>
    <string name="request_id">Request Id</string>
    <string name="main_activity">Main Activity</string>
    <string name="login_activity">Login Activity</string>
    <string name="registration_form_activity">RegistrationFormActivity</string>
    <string name="dummy_user_name">Bynry Technologies</string>
    <string name="dummy_asset_id">123456789</string>
    <string name="dummy_meter_number">987654321</string>
    <string name="dummy_area">Kothrud Depot Pune</string>
    <string name="dummy_complaint_type">Transformer Burnt</string>
    <string name="dummy_asset_name">Transformer</string>
    <string name="dummy_start_date">23/09/2017</string>
    <string name="dummy_assignment_date">25/10/2018</string>
    <string name="dummy_completed_date">28/02/2019</string>
    <string name="dummy_binder">2707</string>
    <string name="dummy_complaint_type2">Meter Burnt</string>
    <string name="dummy_account_no">ABC0005</string>
    <string name="dummy_meter_type">Analog/Digital</string>
    <string name="dummy_inspection_type">Transformer Damage</string>
    <string name="dummy_breakdown_type">BreakDown</string>
    <string name="select_profile_photo">Select Profile Photo</string>
    <string name="gallery">Gallery</string>
    <string name="remove">Remove</string>
    <string name="profile_image">profile_image</string>
    <string name="result">result</string>
    <string name="success">success</string>
    <string name="file_photo">file</string>
    <string name="file_sign">signature_file</string>
    <string name="filePrev">filePrev</string>
    <string name="asset_id_upload">image_id</string>
    <string name="asset_details">Asset Details</string>
    <string name="reading_parameters">Reading Parameters</string>
    <string name="select_sub_division">Select Sub-Division</string>
    <string name="select_area">Select Area*</string>
    <string name="select_ward">Select Ward*</string>
    <string name="select_location">Select Location</string>
    <string name="select_landmark">Select Landmark</string>
    <string name="address">Address</string>
    <string name="enter_asset_address">Enter Asset Address</string>
    <string name="gps_network_not_enabled">GPS Network not <b>Enabled</b></string>
    <string name="open_location_settings">Open Location Settings</string>
    <string name="Cancel">Cancel</string>
    <string name="please_provide_asset_image">Please provide Asset Image</string>
    <string name="job_card_id">jc_id</string>
    <string name="sub_division_id">sub_division_id</string>
    <string name="area_id">area_id</string>
    <string name="asset_indexing_id_upload">asset_id</string>
    <string name="sub_division_upload">sub_division</string>
    <string name="area_id_upload">area</string>
    <string name="location_id_upload">location</string>
    <string name="make_upload">make</string>
    <string name="make_no_upload">make_no</string>
    <string name="address_upload">address</string>
    <string name="latitude_upload">latitude</string>
    <string name="longitude_upload">longitude</string>
    <string name="consumer_info_not_assigned_to_you">Consumer info not Assigned to you!</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="your_profile">Your Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="aadhar_number_mandatory">Aadhar Number</string>
    <string name="you_can_search_using_consumer_name">You can search using <B>Consumer Name</B></string>
    <string name="select_module_name">Select Module Name</string>
    <string name="aadhar_no_already_exists_do_you_still_want_to_continue"> Aadhar No Alreay Exists.\n Do You Still Want to Continue?
    </string>
</resources>