<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/margin_dialog"
        android:background="@drawable/dialog_background"
        android:orientation="vertical"
        android:paddingTop="@dimen/margin_h1">


        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_h2"
            android:gravity="center"
            android:text="@string/aadhar_no_already_exists_do_you_still_want_to_continue"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_x_large" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginTop="@dimen/margin_h2"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2.5">

            <Button
                android:id="@+id/btn_yes"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/margin_h1"
                android:layout_marginBottom="@dimen/margin_h1"
                android:layout_weight="1"
                android:background="@drawable/btn_next"
                android:text="@string/yes"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_h3"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_no"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="@dimen/margin_h2"
                android:layout_marginTop="@dimen/margin_h1"
                android:layout_marginBottom="@dimen/margin_h1"
                android:layout_weight="1"
                android:background="@drawable/btn_reject"
                android:text="@string/no"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_h3"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
