<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_action_landing_back"
    tools:context=".ui.activities.ProfileActivity">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@drawable/ic_action_toolbar"
        app:layout_scrollFlags="scroll|enterAlways|snap"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <LinearLayout
            android:id="@+id/linear_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_back_black"
                android:layout_width="20dp"
                android:layout_height="30dp"
                android:layout_marginRight="@dimen/margin_h2"
                android:src="@drawable/ic_action_back_black" />

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_profile"
                android:textAllCaps="true"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size_h4" />

        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:elevation="@dimen/margin_h6"
            android:gravity="center">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_view_profile"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:src="@drawable/ic_action_default_user_icon" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/image_view_profile"
                android:layout_alignBottom="@+id/image_view_profile">

                <ImageView
                    android:id="@+id/img_camera_edit"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="@dimen/margin_h2"
                    android:background="@drawable/ripple_oval_black"
                    android:padding="@dimen/margin_h2"
                    android:src="@drawable/ic_action_edit_icon"
                    android:visibility="gone" />

            </RelativeLayout>

        </RelativeLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_h2"
            android:layout_marginTop="80dp"
            app:cardCornerRadius="@dimen/margin_h3">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="@dimen/margin_h2"
                android:orientation="vertical"
                android:paddingTop="100dp">

                <TextView
                    android:id="@+id/txt_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/name"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size_h6" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_h3"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_id"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:text="@string/id"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/text_size_h4" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=", "
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/text_size_h4" />

                    <TextView
                        android:id="@+id/txt_city"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/city"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/text_size_h4" />

                </LinearLayout>

                <TextView
                    android:id="@+id/txt_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/margin_h3"
                    android:text="@string/number"
                    android:textColor="@color/colorTextBlue"
                    android:textSize="@dimen/text_size_h4" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>


    <Button
        android:id="@+id/btn_sign_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/margin_h2"
        android:background="@drawable/btn_reject"
        android:text="@string/sign_out"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_h6" />


</RelativeLayout>