<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/ic_action_color_back"
    tools:context=".ui.activities.LoginActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_action_landing_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageClick"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/bgl_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/layout_corner"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edt_id"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:drawablePadding="5dp"
                android:hint="@string/id"
                android:inputType="textVisiblePassword"
                android:paddingLeft="@dimen/margin_h1"
                android:singleLine="true"
                android:textColor="@color/colorTextTitle"
                android:textColorHint="@color/colorTextTitle"
                android:textSize="@dimen/text_size_h5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorTextTitle" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:drawablePadding="5dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/margin_h1"
                android:singleLine="true"
                android:textColor="@color/colorTextTitle"
                android:textColorHint="@color/colorTextTitle"
                android:textSize="@dimen/text_size_h5" />


        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/btn_next"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_h5" />

    </LinearLayout>

</RelativeLayout>