<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/ic_action_landing_back">

    <include layout="@layout/toolbar3"/>

    <LinearLayout
        android:id="@+id/relative_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:padding="@dimen/margin_h2">

        <TextView
            android:id="@+id/txt_search_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:layout_centerHorizontal="true"
            android:hint="@string/you_can_search_using_consumer_name"
            android:textColorHint="@color/colorText"
            android:textSize="@dimen/text_size_h4"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_h2"
            android:weightSum="2">

            <TextView
                android:id="@+id/txt_select_module"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:layout_below="@+id/toolbar"
                android:layout_centerHorizontal="true"
                android:hint="@string/select_module_name"
                android:textColorHint="@color/colorTextFaint"
                android:textSize="@dimen/text_size_h4"
                android:layout_gravity="center"
                android:textAlignment="center"/>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/edit_text_height"
                android:layout_weight="1.2"
                android:background="@drawable/custom_edit_text"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/spinner_module"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:layout_centerVertical="true"
                    android:background="@color/spinnerBackColor" />

                <ImageView
                    android:layout_width="@dimen/margin_h1"
                    android:layout_height="@dimen/margin_h1"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/margin_15"
                    android:src="@drawable/ic_action_arrow" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relative_spinner"
        android:padding="@dimen/margin_h2"
        android:scrollbars="vertical" />

    <TextView
        android:id="@+id/txt_search_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal"
        android:text="@string/search_result"
        android:textAlignment="center"
        android:layout_centerInParent="true"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_x_large"
        android:visibility="gone" />

</RelativeLayout>